bugfix showing connection icon too tall

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -213,7 +213,8 @@ section.event {
   }
 }
 
-.event_info_source_icon {
+.event_info_source_icon,
+.connectionSource_Icon {
   max-width: 16px;
   max-height: 16px;
 }
